--- a/travel/templates/travel/large.html
+++ b/travel/templates/travel/large.html
@@ -4,10 +4,12 @@
 {% block title %}Indicadores: Viajes por Etapas{% endblock %}
 
 {% block css %}
-
+    <link href="{% static "components/leaflet/dist/leaflet.css" %}" rel="stylesheet">
     {% with "components/gentelella/vendors/" as gentelella_static %}
         <link href="{% static gentelella_static|add:"bootstrap-daterangepicker/daterangepicker.css" %}"
               rel="stylesheet">
+      <link href="{% static gentelella_static|add:"ion.rangeSlider/css/ion.rangeSlider.css" %}" rel="stylesheet">
+      <link href="{% static gentelella_static|add:"ion.rangeSlider/css/ion.rangeSlider.skinModern.css" %}" rel="stylesheet">
         <link href="{% static gentelella_static|add:"pnotify/dist/pnotify.css" %}" rel="stylesheet">
         <link href="{% static gentelella_static|add:"pnotify/dist/pnotify.buttons.css" %}" rel="stylesheet">
         <link href="{% static gentelella_static|add:"pnotify/dist/pnotify.nonblock.css" %}" rel="stylesheet">
@@ -20,7 +22,6 @@
         <link href="{% static gentelella_static|add:"iCheck/skins/flat/green.css" %}" rel="stylesheet">
     {% endwith %}
 
-    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.0.0-rc.3/dist/leaflet.css"/>
     <link href="{% static "travel/css/generic.css" %}" rel="stylesheet">
     <link href="{% static "travel/css/large.css" %}" rel="stylesheet">
 
@@ -30,7 +31,7 @@
 
 
     <div class="">
-        
+
         {% include "./titlebar.html" with titlename="Viajes por Etapas" %}
         {% include "./filters.html" %}
 
@@ -106,9 +107,12 @@
                             <span id="visualization_doc_count">0</span> <span id="visualization_doc_count_txt">datos</span>
                         </h2>
                         <div class="clearfix"></div>
-                    </div> 
+                    </div>
                     <div class="x_content" style="height:500px">
                         <div id="mapChart" style="height:inherit;"></div>
+                    </div>
+                    <div class="x_content" style="height:500px">
+                        <input type="text" id="dataLimits" name="data_limits" value="" />
                     </div>
                 </div>
             </div>
@@ -118,10 +122,12 @@
 {% endblock %}
 
 {% block js %}
+    <script src="{% static "components/leaflet/dist/leaflet.js" %}"></script>
     {% with "components/gentelella/vendors/" as gentelella_static %}
         <script src="{% static gentelella_static|add:"moment/min/moment-with-locales.min.js" %}"></script>
         <script src="{% static gentelella_static|add:"bootstrap-daterangepicker/daterangepicker.js" %}"></script>
         <script src="{% static gentelella_static|add:"jquery.tagsinput/src/jquery.tagsinput.js" %}"></script>
+        <script src="{% static gentelella_static|add:"ion.rangeSlider/js/ion.rangeSlider.min.js" %}"></script>
         <script src="{% static gentelella_static|add:"pnotify/dist/pnotify.js" %}"></script>
         <script src="{% static gentelella_static|add:"pnotify/dist/pnotify.buttons.js" %}"></script>
         <script src="{% static gentelella_static|add:"pnotify/dist/pnotify.nonblock.js" %}"></script>
@@ -134,7 +140,6 @@
 
     {% endwith %}
 
-    <script src="https://unpkg.com/leaflet@1.0.0-rc.3/dist/leaflet.js"></script>
 
     <script>
         var ws_data = {};
