added two new views: transfer view and odmatrix view

--- a/templates/admin/base_site.html
+++ b/templates/admin/base_site.html
@@ -50,6 +50,8 @@
                   <li><a href=" {% url "profile:expedition" %} "> Por expedición</a></li>
                   <li><a href=" {% url "profile:stop" %} "> Por parada</a></li>
                   <li><a href=" {% url 'profile:trajectory' %} "> Trayectoria</a></li>
+                  <li><a href=" {% url 'profile:transfers' %} "> Transbordos en parada</a></li>
+                  <li><a href=" {% url 'profile:odmatrix' %} "> Matriz de viaje</a></li>
                 </ul>
               </li>
               <li><a><i class="fa fa-tachometer"></i> Velocidades <span class="fa fa-chevron-down"></span></a>
