--- a/templates/admin/base_site.html
+++ b/templates/admin/base_site.html
@@ -12,7 +12,7 @@
         </div>
 
         <div class="clearfix"></div>
- 
+
         <!-- menu profile quick info -->
         <div class="profile clearfix">
           <div class="profile_pic">
@@ -71,6 +71,7 @@
                     <li><a href=" {% url "travel:graphs" %} ">Resumen</a></li>
                     <li><a href=" {% url "travel:map" %} ">Mapa</a></li>
                     <li><a href=" {% url "travel:large-travels" %} ">Viajes por Etapas</a></li>
+                    <li><a href=" {% url "travel:from-to" %} ">Orígenes y Destinos</a></li>
                     {# <li><a href=" {% url "travel:data" %} ">Datos</a></li> #}
                 </ul>
               </li>
