--- a/templates/admin/base_site.html
+++ b/templates/admin/base_site.html
@@ -40,6 +40,8 @@
               <li><a><i class="fa fa-users"></i> Administración <span class="fa fa-chevron-down"></span></a>
                 <ul class="nav child_menu">
                   <li><a href="{% url 'admin:auth_user_changelist' %}"> Usuarios</a></li>
+                  <li><a href="{% url 'admin:localinfo_operator_changelist' %}"> Operadores</a></li>
+                  <li><a href="{% url 'admin:localinfo_halfhour_changelist' %}"> Medias horas</a></li>
                   <li><a href="{% url 'admin:datamanager_datasourcepath_changelist' %}"> Fuentes de datos</a></li>
                   <li><a href="{% url 'datamanager:loadmanager' %}"> Carga de datos</a></li>
                 </ul>
