legend remove from scroll bar

--- a/velocity/templates/velocity/variation.html
+++ b/velocity/templates/velocity/variation.html
@@ -255,7 +255,8 @@ $(document).ready(function(){
               yAxisIndex: [0],
               start: 0,
               end: 100*nPerPag/nReal,
-              zoomLock: true
+              zoomLock: true,
+              labelFormatter: ''
           };
       }
       console.log(nReal, nPerPag, 100*nPerPag/nReal);
