--- a/profile/templates/profile/transfers.html
+++ b/profile/templates/profile/transfers.html
@@ -13,7 +13,7 @@
       {% inline_select "Día:" "dayFilter" days as days_select %}
       {% columns 2 2 12 days_select as col1 %}
 
-      {% inline_select "Parada:" "stopFilter" stopCodes as stop_select %}
+      {% inline_select "Parada de transbordo:" "stopFilter" stopCodes as stop_select %}
       {% columns 2 2 12 stop_select as col2 %}
 
       {% inline_select "Tipo de día:" "dayTypeFilter" dayTypes True as dayType_select %}
@@ -33,7 +33,8 @@
   </div>
 
   <div class="row">
-    {% panel "fa-bar-chart" "Transbordos" '<div id="barChart" style="height:400px;"></div>' as panel1 %}
+    {% label "Los servicios o estaciones de metro utilizadas para transbordar no está restringido a los servicios que se detienen en la parada. " "info" as label2 %}
+    {% panel "fa-bar-chart" "Transbordos" label2|add:'<br /><div id="barChart" style="height:400px;"></div>' as panel1 %}
     {% columns 12 12 12 panel1 %}
   </div>
 {% endblock %}
