--- a/profile/templates/profile/odmatrix.html
+++ b/profile/templates/profile/odmatrix.html
@@ -32,8 +32,10 @@
     {% with toggleButton='<input id="chartSwitch" type="checkbox" data-toggle="toggle" data-on="Mostrando bajadas" data-off="Mostrando Subidas" data-size="large" data-width="270">' %}
       {% columns 12 12 12 toggleButton as col7 %}
     {% endwith %}
-    {% panel "fa-bar-chart" "Matriz de viaje" '<div id="barChart" style="height:600px;"></div>' as panel4 %}
+    {% panel "fa-bar-chart" "Matriz de viaje" '<div id="matrixChart" style="height:600px;"></div>' as panel4 %}
+    {% panel "fa-bar-chart" "Viajes de una parada" '<div class="btn-group btn-group-xs" id="stops"></div><div id="graphChart" style="height:300px;"></div>' as panel5 %}
     {% columns 12 12 12 panel4 %}
+    {% columns 12 12 12 panel5 %}
   </div>
 {% endblock %}
 
