starting with strategies

--- a/travel/templates/travel/from_to.html
+++ b/travel/templates/travel/from_to.html
@@ -30,7 +30,7 @@
     <div class="">
 
         {% include "./titlebar.html" with titlename="Viajes por Etapas" %}
-        {% include "./filters.html" %}
+        {% include "./filters_to_from.html" %}
 
         <div class="row cols-same-height">
             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
