filter almost ready

--- a/travel/templates/travel/filters_to_from.html
+++ b/travel/templates/travel/filters_to_from.html
@@ -37,6 +37,12 @@
                         </select>
                     </div>
 
+                    <div class="col-lg-4 col-md-6 col-sm-6 col-xs-12 form-group">
+                        <label class="control-label" for="halfHoursFilter">Medias horas (inicio):</label>
+                        <select class="form-control" id='halfHoursFilter' multiple="multiple" style="width: 100%">
+                        </select>
+                    </div>
+
                     <div class="col-lg-2 col-md-12 col-sm-12 col-xs-12 form-group">
                         <button type="submit" id="btnUpdateChart" class="btn btn-success btn-lg btn-round">
                             Aplicar
