--- a/profile/templates/profile/byExpedition.html
+++ b/profile/templates/profile/byExpedition.html
@@ -10,24 +10,30 @@
   <div class="row">
     <div class="col-md-12 col-sm-12 col-xs-12">
     {% inline_select "Día:" "dayFilter" days as days_select %}
-    {% columns 2 2 12 days_select as col1 %}
+    {% columns 3 3 12 days_select as col1 %}
 
-    {% inline_select "Servicio-sentido:" "routeFilter" routes as route_select %}
-    {% columns 2 2 12 route_select as col2 %}
-
-    {% inline_select "Tipo de día:" "dayTypeFilter" dayTypes True as dayType_select %}
-    {% columns 2 2 12 dayType_select as col3 %}
+    {% inline_select "Tipo de día:" "dayTypeFilter" day_types True as dayType_select %}
+    {% columns 3 3 12 dayType_select as col2 %}
 
     {% inline_select "Período de despacho:" "periodFilter" periods True as period_select %}
-    {% columns 2 2 12 period_select as col4 %}
+    {% columns 3 3 12 period_select as col3 %}
 
     {% inline_select "Media hora de despacho:" "minutePeriodFilter" minutes True as half_hour_select %}
-    {% columns 2 2 12 half_hour_select as col5 %}
+    {% columns 3 3 12 half_hour_select as col4 %}
+
+    {% inline_select "Operador:" "operatorFilter" operators as route_select %}
+    {% columns 3 3 12 route_select as col5 %}
+
+    {% inline_select "Servicio usuario:" "userRouteFilter" user_routes as route_select %}
+    {% columns 3 3 12 route_select as col6 %}
+
+    {% inline_select "Servicio TS:" "authRouteFilter" auth_routes as route_select %}
+    {% columns 3 3 12 route_select as col7 %}
 
     {% update_button "btnUpdateChart" "Actualizar datos" as update_button %}
-    {% columns 12 12 12 update_button as col6 %}
+    {% columns 12 12 12 update_button as col8 %}
 
-    {% panel "fa-filter" "Filtro" col1|add:col2|add:col3|add:col4|add:col5|add:col6 %}
+    {% panel "fa-filter" "Filtro" col1|add:col2|add:col3|add:col4|add:col5|add:col6|add:col7|add:col8 %}
     </div>
   </div>
 
