added view with available data

--- a/profile/templates/profile/base.html
+++ b/profile/templates/profile/base.html
@@ -45,4 +45,6 @@
     <script src="{% static "components/echarts-wordcloud/dist/echarts-wordcloud.min.js" %}"></script>
 
     <script src="{% static "js/echartsTheme.js" %}"></script>
+    <script src="{% static "js/availableDays.js" %}"></script>
+    <script src="{% static "js/loadAvailableData.js" %}"></script>
 {% endblock %}
