--- a/profile/templates/profile/byExpedition.html
+++ b/profile/templates/profile/byExpedition.html
@@ -7,57 +7,59 @@
     {% label "OBSERVACIÓN: Los datos mostrados a continuación no consideran evasión." "warning" as label %}
     {% header "Perfil de carga" "por ruta"|add:label %}
 
-  <div class="row">
-    <div class="col-md-12 col-sm-12 col-xs-12">
-    {% inline_select "Día:" "dayFilter" days as days_select %}
-    {% columns 3 3 12 days_select as col1 %}
+    {% include "datamanager/availableDays.html" %}
 
-    {% inline_select "Tipo de día:" "dayTypeFilter" day_types True as dayType_select %}
-    {% columns 3 3 12 dayType_select as col2 %}
+    <div class="row">
+        <div class="col-md-12 col-sm-12 col-xs-12">
+            {% inline_select "Día:" "dayFilter" days as days_select %}
+            {% columns 3 3 12 days_select as col1 %}
 
-    {% inline_select "Período de despacho:" "periodFilter" periods True as period_select %}
-    {% columns 3 3 12 period_select as col3 %}
+            {% inline_select "Tipo de día:" "dayTypeFilter" day_types True as dayType_select %}
+            {% columns 3 3 12 dayType_select as col2 %}
 
-    {% inline_select "Media hora de despacho:" "minutePeriodFilter" minutes True as half_hour_select %}
-    {% columns 3 3 12 half_hour_select as col4 %}
+            {% inline_select "Período de despacho:" "periodFilter" periods True as period_select %}
+            {% columns 3 3 12 period_select as col3 %}
 
-    {% inline_select "Operador:" "operatorFilter" operators as route_select %}
-    {% columns 3 3 12 route_select as col5 %}
+            {% inline_select "Media hora de despacho:" "minutePeriodFilter" minutes True as half_hour_select %}
+            {% columns 3 3 12 half_hour_select as col4 %}
 
-    {% inline_select "Servicio usuario:" "userRouteFilter" user_routes as route_select %}
-    {% columns 3 3 12 route_select as col6 %}
+            {% inline_select "Operador:" "operatorFilter" operators as route_select %}
+            {% columns 3 3 12 route_select as col5 %}
 
-    {% inline_select "Servicio TS:" "authRouteFilter" auth_routes as route_select %}
-    {% columns 3 3 12 route_select as col7 %}
+            {% inline_select "Servicio usuario:" "userRouteFilter" user_routes as route_select %}
+            {% columns 3 3 12 route_select as col6 %}
 
-    {% update_button "btnUpdateChart" "Actualizar datos" as update_button %}
-    {% columns 12 12 12 update_button as col8 %}
+            {% inline_select "Servicio TS:" "authRouteFilter" auth_routes as route_select %}
+            {% columns 3 3 12 route_select as col7 %}
 
-    {% panel "fa-filter" "Filtro" col1|add:col2|add:col3|add:col4|add:col5|add:col6|add:col7|add:col8 %}
+            {% update_button "btnUpdateChart" "Actualizar datos" as update_button %}
+            {% columns 12 12 12 update_button as col8 %}
+
+            {% panel "fa-filter" "Filtro" col1|add:col2|add:col3|add:col4|add:col5|add:col6|add:col7|add:col8 %}
+        </div>
     </div>
-  </div>
 
-  <div class="row">
-    {% panel "fa-clock-o" "Expediciones por hora de inicio" '<div id="timePeriodChart" style="height:50px;"></div>' as panel1 %}
-    {% columns 4 4 4 panel1 %}
+    <div class="row">
+        {% panel "fa-clock-o" "Expediciones por hora de inicio" '<div id="timePeriodChart" style="height:50px;"></div>' as panel1 %}
+        {% columns 4 4 4 panel1 %}
 
-    {% panel "fa-truck" 'Expediciones por patente <strong id="licensePlateNumber">(0)</strong>' '<div id="wordcloudChart1" style="height:50px;"></div>' as panel2 %}
-    {% columns 4 4 4 panel2 %}
+        {% panel "fa-truck" 'Expediciones por patente <strong id="licensePlateNumber">(0)</strong>' '<div id="wordcloudChart1" style="height:50px;"></div>' as panel2 %}
+        {% columns 4 4 4 panel2 %}
 
-    {% panel "fa-calendar" "Expediciones por tipo de día" '<div id="wordcloudChart2" style="height:50px;"></div>' as panel3 %}
-    {% columns 4 4 4 panel3 %}
+        {% panel "fa-calendar" "Expediciones por tipo de día" '<div id="wordcloudChart2" style="height:50px;"></div>' as panel3 %}
+        {% columns 4 4 4 panel3 %}
 
-    {% panel "fa-bar-chart" "Perfil de carga <small>para <strong id='expeditionNumber'>N</strong> expediciones</small>" '<div id="barChart" style="height:600px;"></div>' as panel4 %}
-    {% columns 12 12 12 panel4 %}
+        {% panel "fa-bar-chart" "Perfil de carga <small>para <strong id='expeditionNumber'>N</strong> expediciones</small>" '<div id="barChart" style="height:600px;"></div>' as panel4 %}
+        {% columns 12 12 12 panel4 %}
 
-  </div>
-
-  <div class="row">
-    <div class="col-md-12 col-sm-12 col-xs-12">
-        {% table "expeditionDetail" 7 as expeditionTable %}
-        {% panel "fa-truck" 'Expediciones (<strong id="expeditionNumber2">N</strong>)' expeditionTable %}
     </div>
-  </div>
+
+    <div class="row">
+        <div class="col-md-12 col-sm-12 col-xs-12">
+            {% table "expeditionDetail" 7 as expeditionTable %}
+            {% panel "fa-truck" 'Expediciones (<strong id="expeditionNumber2">N</strong>)' expeditionTable %}
+        </div>
+    </div>
 {% endblock %}
 
 {% block js %}
