--- a/profile/templates/profile/transfers.html
+++ b/profile/templates/profile/transfers.html
@@ -7,6 +7,8 @@
     {% label "OBSERVACIÓN: Los datos mostrados a continuación no consideran evasión." "warning" as label %}
     {% header "Transbordos" "por parada"|add:label %}
 
+    {% include "datamanager/availableDays.html" %}
+
   <div class="row">
     <div class="col-md-12 col-sm-12 col-xs-12">
 
