--- a/profile/templates/profile/base.html
+++ b/profile/templates/profile/base.html
@@ -18,6 +18,9 @@
     background-image: none !important;
     background-color: #D9FFC7;
 }
+.select2-container--default .select2-selection--single {
+    min-height: 32px;
+}
   </style>
 {% endwith %}
 {% endblock %}
@@ -46,5 +49,5 @@
 
     <script src="{% static "js/echartsTheme.js" %}"></script>
     <script src="{% static "js/availableDays.js" %}"></script>
-    <script src="{% static "js/loadAvailableData.js" %}"></script>
+    <script src="{% static "js/loadProfileAvailableData.js" %}"></script>
 {% endblock %}
