--- a/travel/templates/travel/strategies.html
+++ b/travel/templates/travel/strategies.html
@@ -38,7 +38,7 @@
     <div class="">
 
         {% include "./titlebar.html" with titlename="Viajes por Etapas" %}
-        {% include "./filters.html" %}
+        {% include "./filters_fromto.html" %}
 
         <div class="row cols-same-height">
             <div class="x_panel">
