WIP: first implementation of general filter

--- a/profile/templates/profile/base.html
+++ b/profile/templates/profile/base.html
@@ -48,5 +48,6 @@
     <script src="{% static "components/echarts-wordcloud/dist/echarts-wordcloud.min.js" %}"></script>
 
     <script src="{% static "js/echartsTheme.js" %}"></script>
+    <script src="{% static "js/filterManager.js" %}"></script>
     <script src="{% static "js/availableDays.js" %}"></script>
 {% endblock %}
