update name of view

--- a/profile/templates/profile/byExpedition.html
+++ b/profile/templates/profile/byExpedition.html
@@ -5,7 +5,7 @@
 
 {% block content %}
     {% label "OBSERVACIÓN: Los datos mostrados a continuación no consideran evasión." "warning" as label %}
-    {% header "Perfil de carga" "por ruta"|add:label %}
+    {% header "Perfil de carga" "por servicio"|add:label %}
 
     {% include "datamanager/availableDays.html" %}
 
