added filter manager to od view

--- a/profile/templates/profile/byExpedition.html
+++ b/profile/templates/profile/byExpedition.html
@@ -9,7 +9,7 @@
 
     {% include "datamanager/availableDays.html" %}
 
-    {% data_filter data_filter True False True False True False True True True True %}
+    {% data_filter data_filter True False True False False True False True True True True %}
 
     <div class="row">
         {% panel "fa-clock-o" "Expediciones por hora de inicio" '<div id="timePeriodChart" style="height:50px;"></div>' as panel1 %}
