--- a/profile/templates/profile/byStop.html
+++ b/profile/templates/profile/byStop.html
@@ -9,7 +9,7 @@
 
     {% include "datamanager/availableDays.html" %}
 
-    {% data_filter data_filter True True True True False True False False False False %}
+    {% data_filter data_filter True True True False True False True False False False False %}
 
   <div class="row">
     {% panel "fa-clock-o" "Expediciones por hora de inicio" '<div id="timePeriodChart" style="height:50px;"></div>' as panel1 %}
