--- a/templates/admin/base_site.html
+++ b/templates/admin/base_site.html
@@ -58,9 +58,9 @@
               </li>
               <li><a><i class="fa fa-tachometer"></i> Velocidades <span class="fa fa-chevron-down"></span></a>
                 <ul class="nav child_menu">
-                  <li><a href=" {% url "matrix" %} "> matriz por servicio</a></li>
-                  <li><a href=" {% url "ranking" %} "> ranking de velocidades</a></li>
-                  <li><a href=" {% url "variation" %} "> variación de velocidades</a></li>
+                  <li><a href=" {% url "speed:matrix" %} "> matriz por servicio</a></li>
+                  <li><a href=" {% url "speed:ranking" %} "> ranking de velocidades</a></li>
+                  <li><a href=" {% url "speed:variation" %} "> variación de velocidades</a></li>
                 </ul>
               </li>
               <li><a><i class="fa fa-tachometer"></i> Rutas <span class="fa fa-chevron-down"></span></a>
