refactoring to speed app

--- a/speed/templates/speed/matrix.html
+++ b/speed/templates/speed/matrix.html
@@ -16,20 +16,20 @@
             background-color: #D9FFC7;
         }
 
-        .aguila-color .irs-from,
-        .aguila-color .irs-to,
-        .aguila-color .irs-single {
+        .irs-from,
+        .irs-to,
+        .irs-single {
             background: #2A3F54;
         }
 
-        .aguila-color .irs-bar,
-        .aguila-color .irs-bar-edge {
+        .irs-bar,
+        .irs-bar-edge {
             background: transparent;
         }
 
-        .aguila-color .irs-single::after,
-        .aguila-color .irs-from::after,
-        .aguila-color .irs-to::after {
+        .irs-single::after,
+        .irs-from::after,
+        .irs-to::after {
             border-color: #2A3F54 transparent transparent;
         }
     </style>
