--- a/speed/templates/speed/variation.html
+++ b/speed/templates/speed/variation.html
@@ -19,7 +19,7 @@
 
         {% include "datamanager/availableDays.html" %}
 
-        {% data_filter data_filter True False True False False False False False True True True %}
+        {% data_filter data_filter True False True False False False False False True True False %}
 
         <div class="row">
             <div class="col-md-12 col-sm-12 col-xs-12">
